--- a/appoint.html
+++ b/appoint.html
@@ -43,7 +43,7 @@
         </section>
       
         <footer>
-          <p>&copy; 2022 Customer Service Hotline. All rights reserved.</p>
+          <p> Customer Service Hotline. All rights reserved.</p>
         </footer>
 
       </body>
