--- a/aboutus.html
+++ b/aboutus.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/aboutus.css">
     <title>About Us</title>
 </head>
 <body>
+  <section class="header">
+  <div class="links"> 
+    <a href="index.html">Home</a>
+    <a href="aboutus.html">About Us</a>
+    <a href="user.html">User</a>
+    <a href="appoint.html">Appointment</a>
+    <a href="techrep.html">Technology Repair</a>
+    <a href="trouble.html">Troubleshooting</a>
+    <a href="login.html">Login</a>
+</div>
+  </section>
+
 
     <div class="container">
         <div class="header">
@@ -14,8 +27,17 @@
         <div class="about-us">
           <img src="groupproject/aboutus.png" alt="About Us">
           <h2>We repair these...</h2>
-          <p>Apple, HP, Samsung, Toshiba, ASUS, Dell, Lenovo, Acer</p>
+          
+          <li>Apple</li>
+           <li>HP</li> 
+           <li>Samsung</li>
+           <li>Toshiba</li>
+           <li>ASUS</li>
+            <li>Dell</li>
+           <li>Lenovo</li>
+            <li>Acer</li>
         </div>
+
         <div class="products">
           <h2>We take your online shopping seriously!</h2>
           <p>We have state-of-the-art security measures to safeguard your information. Trust us with your personal info.</p>
