--- a/techrep.html
+++ b/techrep.html
@@ -3,15 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/index.css">
     <title>Technology Repair</title>
 </head>
 <body>
 </head>
 <body>
+
+  
+  <div class="links"> 
+    <a href="index.html">Home</a>
+    <a href="aboutus.html">About Us</a>
+    <a href="user.html">User</a>
+    <a href="appoint.html">Appointment</a>
+    <a href="techrep.html">Technology Repair</a>
+    <a href="trouble.html">Troubleshooting</a>
+    <a href="login.html">Login</a>
+</div>
+
   <div class="container">
     <div class="banner">Technology Repair</div>
     <div class="content-img">
-      <img src="phone-repair.jpg" alt="Phone repair">
+      <img src="groupproject/damaged.jfif" alt="Phone repair">
+      <img src="groupproject/broken.jfif" alt="">
+
       <div class="content-text">
         <h2>You break it, we fix it!</h2>
         <p>We specialise in these devices: phones, tablets and computers. TVs as well!!</p>
@@ -20,6 +35,7 @@
     </div>
     <div class="cta">
       <button>Book Now</button>
+      
     </div>
   </div>
 </body>
