--- a/techrep.html
+++ b/techrep.html
@@ -22,10 +22,12 @@
 </div>
 
   <div class="container">
-    <div class="banner">Technology Repair</div>
+    <div class="banner">Technology Repair
+      <img src="groupproject/repaircomputer.jfif" alt="">
+    </div>
     <div class="content-img">
       <img src="groupproject/damaged.jfif" alt="Phone repair">
-      <img src="groupproject/broken.jfif" alt="">
+      <img src="groupproject/broken.jfif" alt="Broken">
 
       <div class="content-text">
         <h2>You break it, we fix it!</h2>
