--- a/login.html
+++ b/login.html
@@ -42,13 +42,30 @@
         <img src="">
     </section>
 
-    <section>
+    <div class="container">
+         <div class="image">
+        <img src="groupproject/login.jfif">
+       </div>
+       
+        <section class="login-details"></section>
         <h1>Don't have an account? Sign up</h1>
         <p>Email/ Phone number</p>
+        <input/>
+        <p>Username</p>
+        <input/>
         <p>Password</p>
-    </section>
-    
+        <input/>
+
+       <button class="button">Login</button>
+
+        <p> Don't have an account?</p>
+        <a href="#">Register</a>
+        </section>
+   </div>
+
+
     <footer>
+
     </footer>
 </body>
 </html>
