--- a/techrep.html
+++ b/techrep.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-  
+  <section class="header">
   <div class="links"> 
     <a href="index.html">Home</a>
     <a href="aboutus.html">About Us</a>
@@ -20,14 +20,17 @@
     <a href="trouble.html">Troubleshooting</a>
     <a href="login.html">Login</a>
 </div>
+</section>
 
   <div class="container">
     <div class="banner">Technology Repair
       <img src="groupproject/repaircomputer.jfif" alt="">
     </div>
-    <div class="content-img">
+
+    <div class="content-image">
       <img src="groupproject/damaged.jfif" alt="Phone repair">
       <img src="groupproject/broken.jfif" alt="Broken">
+    </div>
 
       <div class="content-text">
         <h2>You break it, we fix it!</h2>
@@ -35,12 +38,16 @@
         <p>Our team is highly trained and we only use genuine parts to revive your appliances.</p>
       </div>
     </div>
+
     <div class="cta">
       <button>Book Now</button>
       
-    </div>
+    
   </div>
 </body>
-</html>
-</body>
+
+<footer>
+
+
+</footer>
 </html>
