--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </div>
     </section>
 
+    <h1> HOME </h1>
 
 
 
@@ -45,18 +46,22 @@
         <div class="banner-content"> 
             <h1>Ecommerce Website</h1>
          <img src="groupproject/images.jfif">
-        <button class="button">Shop Now</button>
+        <button class="button">Get Started</button>
         </div>
     </section>
+
 
    
     <section  class="services">
 
     <h1>Suggested for you</h1>
 
-    <img src="groupproject/devices.jfif">
-    <img src="groupproject/damaged.jfif">
+    <img src="groupproject/devices.jfif"> 
+    <img src="groupproject/damaged.jfif">  
     
+    <p>We fix your devices and provide the best!</p>
+    
+
      </section>
 
 
@@ -64,7 +69,7 @@
 </body>
 
 
-<footer>
+<footer class="footer">
 
 
 </footer>
