Added header and logo

--- a/index.html
+++ b/index.html
@@ -35,7 +35,13 @@
     </div>
     </section>
 
-    <h1> HOME </h1>
+    <section class="info">
+        <h1> HOME </h1>
+        <h2> What we provide  </h2>
+        <p>Welcome to my website! 
+          Explore all the things you need from computers to phones and many more! </p>
+        </section>
+
 
 
 
