--- a/login.html
+++ b/login.html
@@ -26,8 +26,11 @@
         }
     </style>
 </head>
-<body>
-    <div class="links"> 
+<body><section class="header">
+       
+    <div class="logo-and-links">  
+        <img class="logo" src="groupproject/computer2.png">
+        <div class="links"> 
         <a href="index.html">Home</a>
         <a href="aboutus.html">About Us</a>
         <a href="user.html">User</a>
@@ -36,7 +39,20 @@
         <a href="trouble.html">Troubleshooting</a>
         <a href="login.html">Login</a>
     </div>
-    
+
+    <div class="icons"> 
+        <div>
+
+            <img src="groupproject/shopping-cart.png">
+        </div>
+        <div>
+            <img src="groupproject/user.png">
+        </div>
+
+    </section>
+
+
+
     <section class="header">
         <h1>Join us on our journey</h1>
         <img src="">
