--- a/techrep.html
+++ b/techrep.html
@@ -11,6 +11,9 @@
 <body>
 
   <section class="header">
+    <div class="logo-and-links">  
+      <img class="logo" src="groupproject/computer2.png">
+      
   <div class="links"> 
     <a href="index.html">Home</a>
     <a href="aboutus.html">About Us</a>
@@ -21,6 +24,20 @@
     <a href="login.html">Login</a>
 </div>
 </section>
+
+ <div class="icons"> 
+      <div>
+
+          <img src="groupproject/shopping-cart.png">
+      </div>
+      <div>
+          <img src="groupproject/user.png">
+      </div>
+  
+  </div>
+  </section>
+
+
 
   <div class="container">
     <div class="banner">Technology Repair
