--- a/user.html
+++ b/user.html
@@ -10,6 +10,9 @@
 
     <body>
       <section class="header">
+        <section class="header">
+          <div class="logo-and-links">  
+              <img class="logo" src="groupproject/computer2.png">
       <div class="links"> 
         <a href="index.html">Home</a>
         <a href="aboutus.html">About Us</a>
@@ -21,9 +24,19 @@
     </div>
    </section>
 
-   
+    <div class="icons"> 
+        <div>
+
+            <img src="groupproject/shopping-cart.png">
+        </div>
+        <div>
+            <img src="groupproject/user.png">
+        </div>
     
-        <div class="container">
+    </div>
+  
+  
+          <div class="container">
           <div class="header">User Rating</div>
 
           <div class="feedback-text">CUSTOMER FEEDBACK</div>
